--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,54 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
-TCRExampleFilePath=E:/FTP/web/tcr/example/TCR-example.csv
+#TCR 示例文件地址
+#TCRExampleFilePath=E:/FTP/web/tcr/example/TCR-example.csv
+TCRExampleFilePath=/ehs/data/fx/web/example/TCR-example.csv
 
 #上传文件的名字，比如：independent.csv
 fileName=independent_set.csv
 
+
+#download 数据集下载地址
+download1=/ehs/data/fx/web/数据集/five_fold.zip
+download2=/ehs/data/fx/web/数据集/independent_set_balanced.csv
+download3=/ehs/data/fx/web/数据集/triple_set_balanced.csv
+download4=/ehs/data/fx/web/数据集/covid_set_balanced.csv
+
+#两个PDB示例文件
+PDBexample1=/ehs/data/fx/web/example/1CGI_l_b.pdb
+PDBexample2=/ehs/data/fx/web/example/1CGI_r_b.pdb
+#PDBexample1=E:/FTP/web/tcr/example/1CGI_l_b.pdb
+#PDBexample2=E:/FTP/web/tcr/example/1CGI_r_b.pdb
+
+#上传的两个PDB文件名字
+PDBfileName1=1CGI_l_b.pdb
+PDBfileName2=1CGI_r_b.pdb
+
+# 分子对接结果示例文件
+#OutputExample=E:/FTP/web/tcr/example/output.gif
+OutputExample=/ehs/data/fx/web/example/output.gif
+
+# 帮助文档
+#HelpDocument=E:/FTP/web/tcr/example/help.pdf
+HelpDocument=/ehs/data/fx/web/example/help.pdf
+
+#生成的 .gif 图片位置
+#gifPath=E:/FTP/web/tcr/example/my_animation.gif
+gifPath=/ehs/data/fx/web/PDB/PDBresult/my_animation.gif
+
+#PDB  文件上传保存的地址
+#PDBfile.upload.root.dir.windows=E:/FTP/web/tcr/PDB
+PDBfile.upload.root.dir.windows=/ehs/data/fx/web/PDB
+
 #TCR 文件上传保存的地址
-TCRfile.upload.root.dir.windows =E:/FTP/web/tcr
+#TCRfile.upload.root.dir.windows =E:/FTP/web/tcr
+TCRfile.upload.root.dir.windows =/ehs/data/fx/web
 
 #邮件附件的地址（运行结果）
-TCRFilePath=E:/FTP/web/tcr/result/result_data.csv
+#TCRFilePath=E:/FTP/web/tcr/result/result_data.csv
+TCRFilePath=/ehs/data/fx/web/result/result_data.csv
 
 #热图下载地址
-HotPathTCR=E:/FTP/web/tcr/heatmap
+#HotPathTCR=E:/FTP/web/tcr/heatmap
+HotPathTCR=/ehs/data/fx/web/heatmap
