--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=competition
 server.address=0.0.0.0
 
 spring.mail.host=smtp.qq.com
+spring.mail.port=587
 spring.mail.username=2357308398@qq.com
 spring.mail.password=krhungvhbuiaeaec
 spring.mail.properties.mail.smtp.auth=true
@@ -18,12 +19,16 @@ fileName=independent_set.csv
 
 
 #download 数据集下载地址
-download1=/ehs/data/fx/web/数据集/five_fold.zip
-download2=/ehs/data/fx/web/数据集/independent_set_balanced.csv
-download3=/ehs/data/fx/web/数据集/triple_set_balanced.csv
-download4=/ehs/data/fx/web/数据集/covid_set_balanced.csv
+download1=/ehs/data/fx/web/database/five_fold.zip
+#download1=https://raw.githubusercontent.com/wdlwdlwdlwdlwdl/competition-file/main/five_fold.zip
+download2=/ehs/data/fx/web/database/independent_set_balanced.csv
+download3=/ehs/data/fx/web/database/triple_set_balanced.csv
+download4=/ehs/data/fx/web/database/covid_set_balanced.csv
 
 #两个PDB示例文件
+#PDBexample1=https://raw.githubusercontent.com/wdlwdlwdlwdlwdl/competition-file/main/1CGI_l_b.pdb
+#PDBexample2=https://raw.githubusercontent.com/wdlwdlwdlwdlwdl/competition-file/main/1CGI_r_b.pdb
+#githubFileUrl=https://raw.githubusercontent.com/wdlwdlwdlwdlwdl/competition-file/main/1CGI_r_b.pdb
 PDBexample1=/ehs/data/fx/web/example/1CGI_l_b.pdb
 PDBexample2=/ehs/data/fx/web/example/1CGI_r_b.pdb
 #PDBexample1=E:/FTP/web/tcr/example/1CGI_l_b.pdb
@@ -40,6 +45,7 @@ OutputExample=/ehs/data/fx/web/example/output.gif
 # 帮助文档
 #HelpDocument=E:/FTP/web/tcr/example/help.pdf
 HelpDocument=/ehs/data/fx/web/example/help.pdf
+#HelpDocument=https://raw.githubusercontent.com/wdlwdlwdlwdlwdl/competition-file/main/help.pdf
 
 #生成的 .gif 图片位置
 #gifPath=E:/FTP/web/tcr/example/my_animation.gif
